@@ -32,7 +32,7 @@ application {
 
 javafx {
     version = '17.0.6'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
@@ -53,6 +53,8 @@ dependencies {
     implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
     implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'
+    implementation group: 'net.java.dev.jna', name: 'jna', version: '5.14.0'
+    implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.14.0'
 
 }
 
@@ -64,7 +66,8 @@ jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'linguji'
+        jvmArgs = [ "--add-opens=javafx.graphics/javafx.stage=de.keksuccino.polyglot.polyglot", "--add-exports=javafx.graphics/com.sun.javafx.tk.quantum=de.keksuccino.polyglot.polyglot" ]
     }
 }
 
